--- a/TestSharpShapes/TestSharpShapes.csproj
+++ b/TestSharpShapes/TestSharpShapes.csproj
@@ -51,6 +51,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="UnitTestRectangles.cs" />
     <Compile Include="UnitTestShape.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
