--- a/TestSharpShapes/TestSharpShapes.csproj
+++ b/TestSharpShapes/TestSharpShapes.csproj
@@ -39,6 +39,7 @@
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Xaml" />
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <Choose>
